# python-api-development

./: .flake8  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: dev_fastapi-oswaldo.yml
alembic/versions/: ad4ea5dcb650_auto_vote.py
app/: __main__.py  utils.py
app/core/: config.py  database.py  models.py  oauth2.py  schemas.py  utils.py
app/db/: __init__.py  post_repository.py  posts.py  users.py  votes.py
app/driver/: models.py  posts_ops.py
app/models/: post.py
app/routers/: auth.py  posts.py  users.py  votes.py
migrations/: env.py
migrations/versions/: 432d61d5f559_add_user_table.py  5ddaef1fe629_add_last_few_columns_to_post_table.py  9c1485cd08ff_add_foreign_key_to_posts_table.py  eb621a8f0da1_add_content_to_post_table.py  f628cf291a93_create_posts_table.py
